[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/objects/weapons/hammer/script/PivotHammer.gd" type="Script" id=1]
[ext_resource path="res://assets/objects/weapons/hammer/woodhammer/wood_hammer.png" type="Texture" id=2]
[ext_resource path="res://assets/ui/progressbars/attack-cooldown-bar.png" type="Texture" id=3]

[sub_resource type="Curve" id=19]
_data = [ Vector2( 0.011236, 1 ), 0.0, 0.320913, 0, 0, Vector2( 0.921348, 0 ), -4.93883, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=20]
width = 300
curve = SubResource( 19 )

[sub_resource type="ParticlesMaterial" id=21]
emission_shape = 1
emission_sphere_radius = 4.0
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 30.0
initial_velocity_random = 0.25
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_curve = SubResource( 20 )

[sub_resource type="RectangleShape2D" id=23]
extents = Vector2( 7.99998, 6.49999 )

[sub_resource type="Animation" id=13]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Hammer:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -90.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("TextureProgress:value")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 100.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Hammer:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Particles2D:emitting")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Particles2D:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 10, 0 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Hammer/Area2D/CollisionShape2D:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=18]
resource_name = "charge"
tracks/0/type = "value"
tracks/0/path = NodePath("Hammer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=22]
resource_name = "heavy_hit"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 90.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Hammer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Particles2D:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Hammer/Area2D/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, false, true ]
}

[sub_resource type="Animation" id=14]
resource_name = "hit"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 90.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Hammer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Hammer/Area2D/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=15]
resource_name = "relax"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 90.0, 0.0 ]
}

[sub_resource type="Animation" id=16]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("TextureProgress:value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=17]
resource_name = "attack_cooldown_bar"
tracks/0/type = "value"
tracks/0/path = NodePath("TextureProgress:value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 100.0, 0.0 ]
}

[node name="ReferencePosition" type="Position2D"]
position = Vector2( 71, 58 )

[node name="HammerController" type="Node2D" parent="."]
position = Vector2( 0, 5 )
script = ExtResource( 1 )

[node name="Particles2D" type="Particles2D" parent="HammerController"]
position = Vector2( 10, 0 )
amount = 100
lifetime = 0.5
one_shot = true
explosiveness = 1.0
local_coords = false
process_material = SubResource( 21 )

[node name="Hammer" type="Sprite" parent="HammerController"]
position = Vector2( 0, -6 )
rotation = -1.5708
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="HammerController/Hammer"]
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HammerController/Hammer/Area2D"]
position = Vector2( 2.00003, -0.499973 )
shape = SubResource( 23 )
disabled = true

[node name="AnimationHammer" type="AnimationPlayer" parent="HammerController"]
anims/RESET = SubResource( 13 )
anims/charge = SubResource( 18 )
anims/heavy_hit = SubResource( 22 )
anims/hit = SubResource( 14 )
anims/relax = SubResource( 15 )

[node name="AnimationCooldown" type="AnimationPlayer" parent="HammerController"]
anims/RESET = SubResource( 16 )
anims/attack_cooldown_bar = SubResource( 17 )

[node name="attackCooldown" type="Timer" parent="HammerController"]
one_shot = true

[node name="TextureProgress" type="TextureProgress" parent="HammerController"]
margin_left = -8.0
margin_top = -16.0
margin_right = 8.0
margin_bottom = -13.0
texture_progress = ExtResource( 3 )
fill_mode = 1
tint_progress = Color( 0.580392, 0.580392, 0.580392, 1 )

[connection signal="body_entered" from="HammerController/Hammer/Area2D" to="HammerController" method="_on_Area2D_body_entered"]
